--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,3 +14,19 @@
 .hide-scrollbar::-webkit-scrollbar {
     display: none;
 }
+
+.animated-img {
+    animation-name: fadeInOut;
+    animation-timing-function: ease-in-out;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes fadeInOut {
+    0%, 100% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+}
