--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,3 +21,11 @@
         opacity: 1;
     }
 }
+
+@layer base {
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+  }
