feat:결과 텍스트 수정

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,3 +44,12 @@
     margin: 0;
   }
 }
+
+*::-webkit-scrollbar {
+  width: 1px;
+  height:5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: gray;  
+}
