fix: 나타나기 효과 제거 및 오버스크롤 방지

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -47,9 +47,13 @@
 
 *::-webkit-scrollbar {
   width: 1px;
-  height:5px;
+  height: 5px;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: gray;  
+  background-color: gray;
+}
+
+body {
+  overscroll-behavior-y: contain;
 }
